--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </ul></div>
 </div>
   <div class="sec5"><h4 style="font-size:40px">My Projects</h4>
-    <a href="https://autorijschoolhillegom.nl/" target="_blank"><img src="https://shano.netlify.app/assets/images/autor.jpg "  alt="Workplace" usemap="#workmap"></a>
+    <a href="https://autorijschoolhillegom.nl/" target="_blank"><img src="https://shano.netlify.app/assets/images/autor.png "  alt="Workplace" usemap="#workmap"></a>
   </div>
 </body>
 <footer class="footer-port">
